--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-    "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:eslint-plugin-next-on-pages/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "plugins": ["eslint-plugin-next-on-pages"],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off"
+  }
 }
