--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
         "autoprefixer": "^10",
         "eslint": "^8",
         "eslint-config-next": "13.5.7",
+        "eslint-plugin-next-on-pages": "^1.13.5",
         "postcss": "^8",
+        "prettier": "^3.3.3",
+        "prettier-plugin-organize-imports": "^4.1.0",
+        "prettier-plugin-tailwindcss": "^0.6.8",
         "tailwindcss": "^3",
         "typescript": "^5"
     },
