--- a/package.json
+++ b/package.json
@@ -1,33 +1,47 @@
 {
-    "name": "communicai",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "next": "13.5.7",
-        "next-intl": "^3.23.5",
-        "react": "^18",
-        "react-dom": "^18"
-    },
-    "devDependencies": {
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "autoprefixer": "^10",
-        "eslint": "^8",
-        "eslint-config-next": "13.5.7",
-        "eslint-plugin-next-on-pages": "^1.13.5",
-        "postcss": "^8",
-        "prettier": "^3.3.3",
-        "prettier-plugin-organize-imports": "^4.1.0",
-        "prettier-plugin-tailwindcss": "^0.6.8",
-        "tailwindcss": "^3",
-        "typescript": "^5"
-    },
-    "packageManager": "pnpm@9.7.1"
+  "name": "CommunicAi",
+  "version": "0.1.0",
+  "private": true,
+  "author": {
+    "name": "Nguyen Cong Gioi",
+    "email": "developer@nguyenconggioi.me",
+    "url": "https://nguyenconggioi.me"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gioimtg2003/CommunicAi.git"
+  },
+  "keywords": [
+    "CommunicAi",
+    "Assistant",
+    "AI"
+  ],
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "13.5.7",
+    "next-intl": "^3.23.5",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.7",
+    "eslint-plugin-next-on-pages": "^1.13.5",
+    "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3",
+    "typescript": "^5"
+  },
+  "packageManager": "pnpm@9.7.1"
 }
