--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
-    "next": "13.5.7",
+    "next": "^15.0.1",
     "next-intl": "^3.23.5",
     "next-themes": "^0.3.0",
     "react": "^18",
